Add Render frontend URL to CORS allowed origins